--- a/.github/workflows/check_tfplan.yaml
+++ b/.github/workflows/check_tfplan.yaml
@@ -17,6 +17,13 @@ jobs:
       with:
         version: 1.4.6
 
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
     - name: Run Terraform Plan
       run: |
         cd tf_code
