.github/workflows: modified check_tfplan workflow
modified Run OPA query section, corrected the relative path to tfplan.json file

--- a/.github/workflows/check_tfplan.yaml
+++ b/.github/workflows/check_tfplan.yaml
@@ -40,7 +40,8 @@ jobs:
         version: 0.42
 
     - name: Run OPA query
-      run: opa eval data.main.allow -f pretty -i tfplan.json -d .github/opa/example_policy.rego
+      run: |
+        opa eval data.main.allow -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego
 
     - name: Check if any policy violations
       run: |
