--- a/.github/workflows/check_tfplan.yaml
+++ b/.github/workflows/check_tfplan.yaml
@@ -56,6 +56,11 @@ jobs:
       run: |
         ./opa eval data.main.planned_resource_changes -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego    
 
+    - name: List Planned Resource Changes
+      id: list-planned-resource-changes
+      run: |
+        opa eval data.main.planned_resource_changes -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego    
+
     - name: List AWS instances
       id: list-aws-instances
       run: |
