.github/workflows: updated OPA version
updated OPA version to latest

--- a/.github/workflows/check_tfplan.yaml
+++ b/.github/workflows/check_tfplan.yaml
@@ -43,7 +43,7 @@ jobs:
       id: setup-opa
       uses: open-policy-agent/setup-opa@v2
       with:
-        version: 0.42
+        version: latest
 
     - name: List AWS instances
       id: list-aws-instances
