--- a/.github/workflows/check_tfplan.yaml
+++ b/.github/workflows/check_tfplan.yaml
@@ -39,26 +39,37 @@ jobs:
         terraform show -json tfplan > tfplan.json
         cat tfplan.json
 
-    - name: Setup OPA
-      id: setup-opa
-      uses: open-policy-agent/setup-opa@v2
-      with:
-        version: latest
+    # - name: Setup OPA
+    #   id: setup-opa
+    #   uses: open-policy-agent/setup-opa@v2
+    #   with:
+    #     version: latest
+
+    - name: Download OPA
+      id: download-opa
+      run: |
+        curl -L -o opa https://openpolicyagent.org/downloads/v0.42.2/opa_linux_amd64_static
+        chmod 755 ./opa
+
+    - name: List Planned Resource Changes
+      id: list-planned-resource-changes
+      run: |
+        ./opa eval data.main.planned_resource_changes -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego    
 
     - name: List AWS instances
       id: list-aws-instances
       run: |
-        opa eval data.main.aws_instance_resources -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego
+        ./opa eval data.main.aws_instance_resources -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego
 
     - name: Run OPA query no output
       id: run-opa-query-no-output
       run: |
-        opa eval data.main.allow -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego
+        ./opa eval data.main.allow -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego
 
     - name: Run OPA query
       id: run-opa-query
       run: |
-        echo "OPA_OUTPUT=$(opa eval data.main.allow -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego)" >> $GITHUB_OUTPUT
+        echo "OPA_OUTPUT=$(./opa eval data.main.allow -f pretty -i tf_code/tfplan.json -d .github/opa/example_policy.rego)" >> $GITHUB_OUTPUT
 
     - name: Check policy violations
       id: check-policy-violations
